add position card and adaptive

--- a/index.html
+++ b/index.html
@@ -19,22 +19,34 @@
       <button class="add-card__button" type="button">Добавить</button>
     </form>
     <section class="cards">
-      <div class="card" data-index-number="1" value="abcde">
+      <div class="card" data-index-number="1">
         <p class="card__number">1</p>
         <p class="card__text">Мерседес</p>
         <img class="card__image" src="./images/mers.jpg" alt="">
+        <div class="card__container-buttons">
+          <button class="card__button-up" type="button"></button>
+          <button class="card__button-down" type="button"></button>
+        </div>
       </div>
 
       <div class="card" data-index-number="2">
         <p class="card__number">2</p>
         <p class="card__text">БМВ</p>
         <img class="card__image" src="./images/bmw.jpg" alt="">
+        <div class="card__container-buttons">
+          <button class="card__button-up" type="button"></button>
+          <button class="card__button-down" type="button"></button>
+        </div>
       </div>
 
       <div class="card" data-index-number="3">
         <p class="card__number">3</p>
         <p class="card__text">Ауди</p>
         <img class="card__image" src="./images/Audi.jpg" alt="">
+        <div class="card__container-buttons">
+          <button class="card__button-up" type="button"></button>
+          <button class="card__button-down" type="button"></button>
+        </div>
       </div>
     </section>
   </main>
@@ -44,6 +56,10 @@
       <p class="card__number"></p>
       <p class="card__text"></p>
       <img class="card__image" src="./images/" alt="">
+      <div class="card__container-buttons">
+        <button class="card__button-up" type="button"></button>
+        <button class="card__button-down" type="button"></button>
+      </div>
     </div>
   </template>
 
